syntax = "proto3";

enum TaskStatus {
  CREATED = 0;
  ASSIGNED = 1;
  ACCEPTED = 2;  
  REJECTED = 3; 
  COMPLETED = 4;
}

message Task {
  string task_id = 1;
  string title = 2;
  string manager = 3;
  string created = 4;
  uint64 reward = 5;
  string template = 6;
  string result = 7;
  string signature = 8;
  TaskStatus status = 9;
}

message TaskAccepted {
  string task_id = 1;   
  string worker = 2;     
  string timestamp = 3; 
}

message TaskRejected {
  string task_id = 1;   
  string worker = 2;   
  string reason = 3;     
  string timestamp = 4; 
  }

message TaskCompleted {
  string task_id = 1;   
  string worker = 2; 
  string result = 3;      
  string timestamp = 4;
}

message TaskMessage {
  string task_id = 1;
  oneof message {
    Task task = 2;
    TaskAccepted task_accepted = 3;
    TaskRejected task_rejected = 4;
    TaskCompleted task_completed = 5;
  }
}
